<resources>
	<string name="googleAPIKey">AIzaSyA2vAa9ZnFNl0WYCGyGSUHhH7p80PWgT-Y</string>
	<string name="app_name">Workers App</string>
	<string name="open">Open</string>
	<string name="close">Close</string>
	<string name="d1_profile">My Profile</string>
	<string name="d2_orders">My Orders</string>
	<string name="d3_my_requests">My Requests</string>
	<string name="d4_my_wallet">My Wallet</string>
	<string name="d5_language">Language</string>
	<string name="d6_settings">Settings</string>
	<string name="d7_about_worker">About Worker</string>
	<string name="d8_contact_us">Contact Us</string>
	<string name="d9_privacy_policy"><![CDATA[Privacy & Policy]]></string>
	<string name="d10_terms_condition"><![CDATA[Terms & Conditions]]></string>
	<string name="d11_logout">Logout</string>
	<string name="d12_login">Login</string>
	<string name="d13_myRequestOrder">My Request Order</string>
	<string name="d14_myWorker">My Workers</string>
	<string name="findBCat">Find by Category</string>
	<string name="exploreWorker">Explore our certified workers by category</string>
	<string name="ebCountry">Explore by Country</string>
	<string name="exploreBCountry">Explore our certified workers by country</string>
	<string name="strShowAll">Show All</string>
	<string name="allResults"> </string>
	<string name="strProfiles">3650 profiles</string>
	<string name="strLanguages">Languages</string>
	<string name="login">Login</string>
	<string name="mobile_number_email">Mobile Number / Email</string>
	<string name="forget_password">Forgot Password?</string>
	<string name="sign_up">Sign Up</string>
	<string name="about_workers_app">About Workers App</string>
	<string name="register_in_workers_app_as_individual">Register in Workers app as Individual</string>
	<string name="name">Name</string>
	<string name="email">Email</string>
	<string name="mobile_number">Mobile Number</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="company_name">Company Name</string>
	<string name="register_in_workers_app_as_corporate">Register in Workers app as Corporate</string>
	<string name="noData">No Worker Found...</string>
	<string name="individual_account">Individual Account</string>
	<string name="corporate_account">Corporate Account</string>
	<string name="alertlogout">Are you sure you want to Logout?</string>
	<string name="alertdeleterequest">Are you sure you want to cancel worker request?</string>
	<string name="alertdeletedocument">Are you sure you want to remove the document?</string>
	<string name="alertdeleteorder">Are you sure you want to cancel the order?</string>
	<string name="removedocument">Remove Document</string>
	<string name="cancelorder">Cancel Order</string>
	<string name="cancerequest">Cancel Worker Request</string>
	<string name="city">City</string>
	<string name="Yes">Yes</string>
	<string name="No">No</string>
	<string name="city_select">Select City</string>
	<string name="my_request">My Request</string>
	<string name="requested_workers_detail">Requested workers detail</string>
	<string name="txt_total_amount">Total Amount</string>
	<string name="txt_total_worker">Total requested workers</string>
	<string name="select_language">Select Language</string>
	<string name="arabic_txt_select_language">إختر اللغة</string>
	<string name="agreement_policy">Privacy Policy</string>
	<string name="agree_policy">Agreement Policy</string>
	<string name="terms_and_condition_txt"><![CDATA[Terms & Conditions]]></string>
	<string name="our_promises">Our Promises</string>
	<string name="thankyou">Thank You</string>
	<string name="backButton">Back to Home</string>
	<string name="thankYou_description1">Our support team will send you the workers profiles based on your request.</string>
	<string name="thankYou_description2">This action maybe take 24 hours some time, So you will got be notified by email, SMS, and through the mobile app.</string>
	<string name="from_where_you_want_get_workers">From where you want get workers?</string>
	<string name="search_text">Search for...</string>
	<string name="explore_text">Explore our certified workers by category</string>
	<string name="explore_text11">Explore our certified Workers by Country</string>
	<string name="myrequestlisting">My Request Listing</string>
	<string name="workersDetail">Requested workers detail</string>
	<string name="requst_id">Request Id</string>
	<string name="nationality">Nationality</string>
	<string name="category">Category</string>
	<string name="requested_workers">Requested workers</string>
	<string name="totalmatchingworkers">Total matching workers</string>
	<string name="tab_to_view">Tap to View</string>
	<string name="status">Status</string>
	<string name="inprogress">In progress</string>
	<string name="viewrequest">View Request</string>
	<string name="requst_date">Request date</string>
	<string name="myorderlisting">My Order Listing</string>
	<string name="total_contract_fees">Total Contract fees</string>
	<string name="add_ons_services">Add-ons services</string>
	<string name="discount">Discount</string>
	<string name="total">Total</string>
	<string name="download_invoice">Download Invoice</string>
	<string name="download_contract">Download Contract</string>
	<string name="order_id">Order Id</string>
	<string name="order_date">Order date</string>
    <string name="cancel_">Cancel Order</string>
	<string name="order_summary">Order Summary</string>
	<string name="slect_your_service">Select your add-ons services</string>
	<string name="info1">Worker visa clearance at airport and drop worker to your location</string>
	<string name="more_info">More Info</string>
	<string name="info2">Accommodation for worker</string>
	<string name="please_select_location">Please select drop location*</string>
	<string name="please_select_work_location">Please select work location*</string>
	<string name="map_view">Map view</string>
	<string name="apply">Apply</string>
	<string name="pay_now">Pay Now</string>
	<string name="coupuon_code">Coupon code</string>
    <string name="validaddress">Please enter valid address</string>
    <string name="validworkaddress">Please enter valid work address</string>
    <string name="applycoupon">Please Enter Coupon code</string>
    <string name="youhave">You have</string>
    <string name="sarinyourwallet">SAR in your wallet</string>
    <string name="usedwalletamount">Please Enter Wallet Amount</string>
	<string name="wallet_amount">Wallet amount</string>
	<string name="vat">VAT</string>
    <string name="gps">GPS turned off</string>
    <string name="gpsalert">GPS is not enabled. Do you want to go to settings menu ?</string>
    <string name="gpsetting">Settings</string>
    <string name="gpcancel">Cancel</string>
	<string name="couponalert">You cannot apply coupon amount more than worker\'s contract fees</string>
	<string name="couponRemove">Remove</string>
	<string name="removeCoupon">Coupon removed successfully</string>
	<string name="cpn1">you cannot apply coupon on VAT and add-ons services</string>
	<string name="notification_alert">Notification Alert OFF/ON</string>
	<string name="my_wallet">My Wallet</string>
	<string name="wallet_history">Wallet History</string>
	<string name="Order_id">Order ID: </string>
	<string name="reedeem_your_voucher_now">Redeem your voucher now !</string>
	<string name="enterwalletamountmustbelessthen">You cannot apply coupon amount more than worker\'s contract fees</string>
	<string name="wallet_success">Wallet amount applied successfully</string>
	<string name="walMsg">Entered amount must be less than Wallet amount</string>
	<string name="walMsg1">Entered amount must be less than Total amount</string>
	<string name="visa_detail">Visa Detail</string>
	<string name="please_upload_your_id_visa">Please upload Your Id / visa</string>
	<string name="please_write_your_id_number">Please write Your Id number</string>
	<string name="you_can_use_camera">You can use camera or upload PDF/JPEG/PNG</string>
	<string name="you_can_use_camera_to_upload">You can use camera or upload PDF/JPEG/PNG</string>
	<string name="country_name">Country name:</string>
	<string name="click_here">Click Here</string>
	<string name="next">Next</string>
	<string name="opencamera">Open Camera</string>
	<string name="choosefromgallery">Choose From Gallery</string>
	<string name="my_workers">My Workers</string>
	<string name="workers_name">Worker name</string>
	<string name="contract_fees">Contract fees</string>
	<string name="timeline">Timeline</string>
	<string name="all_my_workers">All My Workers</string>
	<string name="completed">Completed</string>
	<string name="on_going">On Going</string>
	<string name="no_records_found">No Records Found!</string>
	<string name="view_request_details">View Request details</string>
	<string name="country">Country</string>
	<string name="age_range">Age range</string>
	<string name="total_categories">Total Categories</string>
	<string name="categoryname">Category name</string>
	<string name="sub_category">Sub category</string>
	<string name="quantity">Quantity</string>
	<string name="worker_name">Worker name</string>
	<string name="religon">Religion</string>
	<string name="age">Age</string>
	<string name="sar">SAR</string>
	<string name="gender">Gender</string>
	<string name="networkcheck">networkCheck</string>
	<string name="alertfirstname">Please Enter Name</string>
	<string name="alertfirstnamec">Please Enter Company Name</string>
	<string name="alertEmailAddress">Please Enter Email address</string>
	<string name="alertEmailAddressandmobile">Please Enter Mobile Number or Email</string>
	<string name="alertValid_Email_Mobile">Email or Mobile number is not correct</string>
	<string name="alertmobile">Please Enter Phone number</string>
	<string name="alertcompName">Please Enter Company name</string>
	<string name="alertpassword">Please Enter Password</string>
	<string name="alertcity">Please Select your City</string>
	<string name="alertnewpassword">Please Enter New Password</string>
	<string name="alertoldpassword">Please Enter Old Password</string>
	<string name="alertConfirmpassword">Please Enter Confirm Password</string>
	<string name="alertConfirmpasswordandpassword">Password and Confirm Password is not matching</string>
	<string name="alertvalidemail">Please Enter Valid Email address</string>
	<string name="alertvalidpasswordi">Please Enter at least 5 Character of Password</string>
	<string name="alertvalidpassword">Password must be greater than 4 characters</string>
	<string name="alertvalidpasswordc">Please Enter at least 5 Character of Confirm Password</string>
	<string name="alertvalidmobile">Mobile number should be between 8 to 13 digits</string>
	<string name="logout">Logout</string>
	<string name="are_you_sure_logout">Are you sure want to Logout ?</string>
	<string name="invalid_password">Invalid Password</string>
	<string name="invalid_mobile">Invalid Mobile Number</string>
	<string name="invalid_name">Invalid Name</string>
	<string name="confirm">Yes</string>
	<string name="cancel">No</string>
	<string name="skip">Skip</string>
	<string name="about_worker">About Worker</string>
	<string name="contact_us">Contact Us</string>
	<string name="sign_in">Sign In</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="register_with_us">Register with us</string>
	<string name="sign_up_now_and_select_your_account_type">Select your account type and sign up now</string>
	<string name="terms_amp_condition"><![CDATA[Terms & Conditions]]></string>
	<string name="Search_for">Search for...</string>
    <string name="setting">Settings</string>
    <string name="notification">Notification</string>
	<string name="allow_notification">Allow Notification</string>
    <string name="marketing_preferences">Marketing Preferences</string>
	<string name="security_amp_location"><![CDATA[Security & Location]]></string>
	<string name="automatic_location">Automatic Location</string>
</resources>