<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	
	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:cardCornerRadius="@dimen/_3sdp"
		android:layout_margin="@dimen/_10sdp"
		android:id="@+id/card_view">
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/_10sdp">
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					
					<com.worker.app.utility.MyTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/name"
						android:textColor="#323232"
						android:textSize="@dimen/_12sdp"
						app:font_regular="true" />
					
					<com.worker.app.utility.MyTextView
						android:id="@+id/txt_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginRight="@dimen/_30sdp"
						android:layout_weight="0.6"
						android:text="Name"
						android:textColor="#6EC0BD"
						android:textSize="@dimen/_12sdp"
						app:font_regular="true" />

				</LinearLayout>
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/_10sdp"
					android:orientation="horizontal">
					
					<com.worker.app.utility.MyTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/nationality"
						android:textColor="#323232"
						android:textSize="@dimen/_12sdp"
						app:font_regular="true" />
					
					<com.worker.app.utility.MyTextView
						android:id="@+id/txt_nationality"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginRight="@dimen/_30sdp"
						android:layout_weight="0.6"
						android:text="Name"
						android:textColor="#6EC0BD"
						android:textSize="@dimen/_12sdp"
						app:font_regular="true" />

				</LinearLayout>
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/_10sdp"
					android:orientation="horizontal">
					
					<com.worker.app.utility.MyTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/category"
						android:textColor="#323232"
						android:textSize="@dimen/_12sdp"
						app:font_regular="true" />
					
					<com.worker.app.utility.MyTextView
						android:id="@+id/txt_category"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginRight="@dimen/_30sdp"
						android:layout_weight="0.6"
						android:text="Name"
						android:textColor="#6EC0BD"
						android:textSize="@dimen/_12sdp"
						app:font_regular="true" />
				</LinearLayout>
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/_10sdp"
					android:orientation="horizontal">
					
					<com.worker.app.utility.MyTextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/contract_fees"
						android:textColor="#323232"
						android:textSize="@dimen/_12sdp"
						app:font_regular="true" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:layout_weight="0.6">

						<com.worker.app.utility.MyTextView
							android:id="@+id/txt_contractfees"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textColor="@color/txt_color"
							android:textSize="@dimen/_12sdp"
							app:font_regular="true"
							android:text="Name"/>

						<com.worker.app.utility.MyTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/sar"
							android:paddingLeft="@dimen/_3sdp"
							android:textColor="@color/txt_color"
							android:textSize="@dimen/_10sdp"
							app:font_regular="true" />

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>
			
			<ImageView
				android:id="@+id/option"
				android:layout_width="@dimen/_20sdp"
				android:layout_height="@dimen/_20sdp"
				android:layout_alignParentRight="true"
				android:layout_marginRight="@dimen/_5sdp"
				android:background="@drawable/option_menu_icon"
				android:backgroundTint="@color/txt_color"/>

		</RelativeLayout>
	
	</androidx.cardview.widget.CardView>

</RelativeLayout>