<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.worker.app.utility.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/setting"
                android:textColor="@color/colorTextColor"
                android:textSize="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                app:font_semibold="true" />

            <View
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:background="@color/black" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp">

            <com.worker.app.utility.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                app:font_regular="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.worker.app.utility.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow_notification"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/_13sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                app:font_regular="true"
                android:layout_centerVertical="true"/>

            <Switch
                android:id="@+id/aSwitch_allowNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <com.worker.app.utility.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marketing_preferences"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/_13sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                app:font_regular="true"
                android:layout_centerVertical="true"/>

            <Switch
                android:id="@+id/aSwitch_marketingPreference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp">

            <com.worker.app.utility.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_amp_location"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                app:font_regular="true" />

        </RelativeLayout>

        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <example.kalp.workerapp.utility.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_amp_location"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/_13sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                app:font_regular="true"
                android:layout_centerVertical="true"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.worker.app.utility.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/automatic_location"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/_13sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                app:font_regular="true"
                android:layout_centerVertical="true"/>

            <Switch
                android:id="@+id/aSwitch_automaticLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </LinearLayout>

    <com.worker.app.utility.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="13032020-1"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:font_regular="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_alignParentBottom="true"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>